--- a/src/Host/H.LowCode.Admin.Host/wwwroot/admin.css
+++ b/src/Host/H.LowCode.Admin.Host/wwwroot/admin.css
@@ -1,6 +1,10 @@
 ﻿body {
 }
 
+.ant-layout {
+    background-color: #f6f6f6 !important;
+}
+
 .myapps .ant-card-meta-avatar, .myapps .ant-card-meta-title {
     cursor: pointer;
 }
