生态中心、解决方案中心 样式修改

--- a/src/Admin/H.LowCode.Admin/Pages/MarketCenter.razor
+++ b/src/Admin/H.LowCode.Admin/Pages/MarketCenter.razor
@@ -3,43 +3,25 @@
 @layout ProAdminLayout
 
 <style>
-    .ant-carousel .slick-slide {
+    .market-banner {
         text-align: center;
         height: 160px;
         line-height: 160px;
         overflow: hidden;
-    }
-    .ant-carousel {
         margin: -24px -24px 10px -24px;
-    }
-    .slick-slide {
         background-size: 100% 160px;
         background-image: url(https://img.alicdn.com/imgextra/i2/O1CN01yp2QLE1eCw9HpYIy5_!!6000000003836-0-tps-3171-1784.jpg);
     }
 </style>
 
-<Carousel>
-    <CarouselSlick>
-        <div>
-            应用模板
-        </div>
-    </CarouselSlick>
-    <CarouselSlick>
-        <div>
-            组件库
-        </div>
-    </CarouselSlick>
-    <CarouselSlick>
-        <div>
-            主题模板
-        </div>
-    </CarouselSlick>
-    <CarouselSlick>
-        <div>
-            插件
-        </div>
-    </CarouselSlick>
-</Carousel>
+<div class="market-banner">
+    <div style="font-size: 24px; font-weight: bold;">
+        <span>低代码平台</span>
+        <span style="color: white; -webkit-text-fill-color: transparent;
+                background: -webkit-linear-gradient(360deg, #0089ff 30%, #30e724);
+                background-clip: text; -webkit-background-clip: text;">生态中心</span>
+    </div>
+</div>
 
 <Tabs DefaultActiveKey="tab_market_app" Centered Animated Style="width: 80%; margin: auto;">
     <TabPane Tab="应用模板" Key="tab_market_app">
