--- a/src/Admin/H.LowCode.Admin/Pages/SolutionCenter.razor
+++ b/src/Admin/H.LowCode.Admin/Pages/SolutionCenter.razor
@@ -2,7 +2,28 @@
 
 @layout ProAdminLayout
 
-<Tabs DefaultActiveKey="tab_template_app" Class="center-div" Centered Animated>
+<style>
+    .solution-banner {
+        text-align: center;
+        height: 160px;
+        line-height: 160px;
+        overflow: hidden;
+        margin: -24px -24px 10px -24px;
+        background-size: 100% 160px;
+        background-image: url(https://img.alicdn.com/imgextra/i2/O1CN01yp2QLE1eCw9HpYIy5_!!6000000003836-0-tps-3171-1784.jpg);
+    }
+</style>
+
+<div class="solution-banner">
+    <div style="font-size: 24px; font-weight: bold;">
+        <span>低代码平台</span>
+        <span style="color: white; -webkit-text-fill-color: transparent;
+                background: -webkit-linear-gradient(360deg, #0089ff 30%, #30e724);
+                background-clip: text; -webkit-background-clip: text;">解决方案中心</span>
+    </div>
+</div>
+
+<Tabs DefaultActiveKey="tab_template_app" Class="center-div" Centered Animated Style="width: 80%; margin: auto;">
     <TabPane Tab="行业解决方案" Key="tab_solution_industry">
         <Card Title="智慧医院" Style="float:left; width:300px; margin:5px;">
             <Extra>
