- razor 组件、页面 全部指定 namespace（统一与项目名保持一致） - 增加页面渲染相关 razor 组件

--- a/src/Admin/H.LowCode.Admin/Pages/Apps/AppCreate.razor
+++ b/src/Admin/H.LowCode.Admin/Pages/Apps/AppCreate.razor
@@ -1,4 +1,5 @@
-﻿@layout ProAdminLayout
+﻿@namespace H.LowCode.Admin
+@layout ProAdminLayout
 
 @inject IHttpClientFactory HttpClientFactory
 @inject NavigationManager NavigationManager
