--- a/src/Admin/H.LowCode.Admin/Pages/Markets/AppTemplates.razor
+++ b/src/Admin/H.LowCode.Admin/Pages/Markets/AppTemplates.razor
@@ -1,4 +1,5 @@
-﻿@layout ProAdminLayout
+﻿@namespace H.LowCode.Admin
+@layout ProAdminLayout
 
 <div style="margin:10px 5px;">
     <Segmented Size="SegmentedSize.Large" Labels=@(new[]{"全部", "OA", "CRM", "ERP", "门户", "医疗", "教育", "酒店", "餐饮", "水务"}) />
