--- a/src/Admin/H.LowCode.Admin/Pages/MyApps.razor
+++ b/src/Admin/H.LowCode.Admin/Pages/MyApps.razor
@@ -1,6 +1,7 @@
 ﻿@page "/admin/myapps"
-
+@namespace H.LowCode.Admin
 @layout ProAdminLayout
+
 @inject IHttpClientFactory HttpClientFactory
 @inject NavigationManager NavigationManager
 @inject ComponentStateWrapper<MyApps, IList<AppSchema>> State
