--- a/src/Admin/H.LowCode.Admin/Pages/Solutions/SolutionIntroduction.razor
+++ b/src/Admin/H.LowCode.Admin/Pages/Solutions/SolutionIntroduction.razor
@@ -1,5 +1,5 @@
-﻿@layout ProAdminLayout
-
-@page "/solution/introdution"
+﻿@page "/solution/introdution"
+@namespace H.LowCode.Admin
+@layout ProAdminLayout
 
 <h1>解决方案介绍</h1>
