--- a/src/Admin/H.LowCode.Admin/_Imports.razor
+++ b/src/Admin/H.LowCode.Admin/_Imports.razor
@@ -10,8 +10,6 @@
 @using AntDesign.ProLayout
 @using AntDesign.TableModels
 @using H.Extensions.System
-@using H.LowCode.Admin.Layout
-@using H.LowCode.Admin.Pages.Apps
-@using H.LowCode.Admin.Pages.Markets
+@using H.LowCode.Admin
 @using H.LowCode.MetaSchema
 @using H.Util.Blazor
