--- a/src/DesignEngine/H.LowCode.DesignEngine.Admin/Layout/DesignEngineAdminLayout.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine.Admin/Layout/DesignEngineAdminLayout.razor
@@ -1,4 +1,6 @@
-﻿@inherits LayoutComponentBase
+﻿@namespace H.LowCode.DesignEngine.Admin
+@inherits LayoutComponentBase
+
 @inject ComponentStateWrapper<DesignEngineAdminLayout, MenuDataItem[]> State
 @inject ComponentStateWrapper<string, string> State2
 
