--- a/src/DesignEngine/H.LowCode.DesignEngine.Admin/Pages/DataSource/DataSourceTable.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine.Admin/Pages/DataSource/DataSourceTable.razor
@@ -1,4 +1,6 @@
-﻿@* 数据表基本信息 *@
+﻿@namespace H.LowCode.DesignEngine.Admin
+
+@* 数据表基本信息 *@
 <Descriptions Style="margin: 0 0 8px 0;" Bordered>
     <DescriptionsItem Title="表名">
         <Input @bind-Value="@DataSource.Key" Disabled="@(!DataSource.Key.IsNullOrEmpty())">
