--- a/src/DesignEngine/H.LowCode.DesignEngine.Admin/Pages/DataSourceManager.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine.Admin/Pages/DataSourceManager.razor
@@ -1,5 +1,5 @@
 ﻿@page "/myapp/{AppId}/datasource"
-
+@namespace H.LowCode.DesignEngine.Admin
 @layout DesignEngineAdminLayout
 
 <Tabs DefaultActiveKey="tab_datasource_table" OnChange="OnTabChange" Animated>
