--- a/src/DesignEngine/H.LowCode.DesignEngine.Admin/Pages/MenuManager.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine.Admin/Pages/MenuManager.razor
@@ -1,6 +1,7 @@
 ﻿@page "/myapp/{AppId}/menumanager"
-
+@namespace H.LowCode.DesignEngine.Admin
 @layout DesignEngineAdminLayout
+
 @inject IHttpClientFactory HttpClientFactory
 @inject NavigationManager NavigationManager
 @inject IMessageService Message
