--- a/src/DesignEngine/H.LowCode.DesignEngine.Admin/Pages/PageManager.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine.Admin/Pages/PageManager.razor
@@ -1,6 +1,7 @@
 ﻿@page "/myapp/{AppId}/pagemanager"
-
+@namespace H.LowCode.DesignEngine.Admin
 @layout DesignEngineAdminLayout
+
 @inject IHttpClientFactory HttpClientFactory
 @inject NavigationManager NavigationManager
 @inject ComponentStateWrapper<PageManager, IList<PageListModel>> State
