--- a/src/DesignEngine/H.LowCode.DesignEngine/ComponentPanel/ComponentPanel.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine/ComponentPanel/ComponentPanel.razor
@@ -1,4 +1,6 @@
-﻿@inject IEnumerable<IComponentProvider> ComponentProviders
+﻿@namespace H.LowCode.DesignEngine
+
+@inject IEnumerable<IComponentProvider> ComponentProviders
 @inject IEnumerable<IPageTemplateProvider> PageTemplateProviders
 @inject DragDropStateService DragDropStateService
 
