--- a/src/DesignEngine/H.LowCode.DesignEngine/ComponentPanel/DragItem.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine/ComponentPanel/DragItem.razor
@@ -1,4 +1,6 @@
-﻿@inject DragDropStateService DragDropStateService
+﻿@namespace H.LowCode.DesignEngine
+
+@inject DragDropStateService DragDropStateService
 
 <div draggable="true" class="dragitem" style="@Style" @ondragstart="OnDragStart" @onclick="OnClick">
     @Component.ComponentProperty.Title
