--- a/src/DesignEngine/H.LowCode.DesignEngine/DesignPanel/DesignPanel.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine/DesignPanel/DesignPanel.razor
@@ -1,4 +1,6 @@
-﻿@inject DragDropStateService DragDropStateService
+﻿@namespace H.LowCode.DesignEngine
+
+@inject DragDropStateService DragDropStateService
 @inject ComponentStateWrapper<DesignPanel, ComponentSchema> State
 
 <div class="designpanel" style="margin:5px; height:100%; overflow-y: auto;">
