--- a/src/DesignEngine/H.LowCode.DesignEngine/DesignPanel/DropItemContainer.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine/DesignPanel/DropItemContainer.razor
@@ -1,4 +1,6 @@
-﻿@inject DragDropStateService DragDropStateService
+﻿@namespace H.LowCode.DesignEngine
+
+@inject DragDropStateService DragDropStateService
 
 <div class="dropitemcontainer" style="@ContainerComponent.ComponentStyle.DefaultStyle" @onclick="OnClick"
      @ondragover="(e)=>{}" @ondragover:preventDefault @ondragover:stopPropagation
