--- a/src/DesignEngine/H.LowCode.DesignEngine/SettingPanel/EventSetting.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine/SettingPanel/EventSetting.razor
@@ -1,4 +1,6 @@
-﻿@if (Component != null)
+﻿@namespace H.LowCode.DesignEngine
+
+@if (Component != null)
 {
     <Space Direction="@DirectionVHType.Vertical" Style="width: 100%">
         <SpaceItem>
