--- a/src/DesignEngine/H.LowCode.DesignEngine/SettingPanel/PageSetting.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine/SettingPanel/PageSetting.razor
@@ -1,4 +1,6 @@
-﻿<div class="pagesetting-item">
+﻿@namespace H.LowCode.DesignEngine
+
+<div class="pagesetting-item">
     <label>布局：</label>
     <RadioGroup TValue="int" Value="@Page.PageProperty.PageLayout" ValueChanged="OnValueChange">
         <Radio RadioButton Value="1">一列</Radio>
