--- a/src/DesignEngine/H.LowCode.DesignEngine/SettingPanel/SettingPanel.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine/SettingPanel/SettingPanel.razor
@@ -1,4 +1,6 @@
-﻿@inject DragDropStateService DragDropStateService
+﻿@namespace H.LowCode.DesignEngine
+
+@inject DragDropStateService DragDropStateService
 
 <Tabs DefaultActiveKey="tab_page" @bind-ActiveKey="@_activeTabKey" Class="settingpanel" Style="width:250px; padding:0px 8px;">
     @if (_showPropertyPanel)
