--- a/src/DesignEngine/H.LowCode.DesignEngine/SettingPanel/StyleSetting.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine/SettingPanel/StyleSetting.razor
@@ -1,4 +1,6 @@
-﻿@if (Component != null)
+﻿@namespace H.LowCode.DesignEngine
+
+@if (Component != null)
 {
     <div class="propertysetting-item">
         <label>组件宽度：</label>
