--- a/src/DesignEngine/H.LowCode.DesignEngine/_Imports.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine/_Imports.razor
@@ -9,11 +9,8 @@
 @using System.Text.Json
 @using System.Text.Json.Serialization
 @using AntDesign
-@using H.LowCode.DesignEngine.Layout
-@using H.LowCode.DesignEngine.ComponentPanel
-@using H.LowCode.DesignEngine.DesignPanel
-@using H.LowCode.DesignEngine.SettingPanel
-@using H.Util.Blazor
+@using H.LowCode.DesignEngine
 @using H.LowCode.DesignEngine.Abstraction
 @using H.LowCode.MetaSchema
 @using H.Extensions.System
+@using H.Util.Blazor
