--- a/src/Parts/H.LowCode.ComponentParts.BasicComponents/Components/ButtonWrap.razor
+++ b/src/Parts/H.LowCode.ComponentParts.BasicComponents/Components/ButtonWrap.razor
@@ -1,4 +1,6 @@
-﻿<Button Type="@ButtonType.Primary">@Text</Button>
+﻿@namespace H.LowCode.ComponentParts.BasicComponents
+
+<Button Type="@ButtonType.Primary">@Text</Button>
 
 @code {
     [Parameter]
