--- a/src/Parts/H.LowCode.ComponentParts.BasicComponents/Components/DescriptionsWrap.razor
+++ b/src/Parts/H.LowCode.ComponentParts.BasicComponents/Components/DescriptionsWrap.razor
@@ -1,4 +1,6 @@
-﻿<Descriptions Title="@Component.ComponentProperty.Title" Style="height:auto">
+﻿@namespace H.LowCode.ComponentParts.BasicComponents
+
+<Descriptions Title="@Component.ComponentProperty.Title" Style="height:auto">
     @for (int i = 0; i < ItemCount; i++)
     {
         <DescriptionsItem Title="@Component.ComponentProperty.Title" ContentStyle="font-weight: bold;">
