--- a/src/Parts/H.LowCode.ComponentParts.BasicComponents/Components/FlexWrap.razor
+++ b/src/Parts/H.LowCode.ComponentParts.BasicComponents/Components/FlexWrap.razor
@@ -1,4 +1,6 @@
-﻿<Flex Gap="middle" Justify="@_justify" Align="@_align" Style="@_boxStyle">
+﻿@namespace H.LowCode.ComponentParts.BasicComponents
+
+<Flex Gap="middle" Justify="@_justify" Align="@_align" Style="@_boxStyle">
     <DropItemContainer ContainerComponent="@_component"></DropItemContainer>
 </Flex>
 
