--- a/src/Parts/H.LowCode.ComponentParts.BasicComponents/Components/LayoutWrap.razor
+++ b/src/Parts/H.LowCode.ComponentParts.BasicComponents/Components/LayoutWrap.razor
@@ -1,4 +1,5 @@
-﻿@inherits ContainerComponentBase
+﻿@namespace H.LowCode.ComponentParts.BasicComponents
+@inherits ContainerComponentBase
 
 <Layout Style="height:100%">
     <Sider Style="background: #f4f7fa; height:100%;">
