--- a/src/Parts/H.LowCode.ComponentParts.BasicComponents/Components/TableWrap.razor
+++ b/src/Parts/H.LowCode.ComponentParts.BasicComponents/Components/TableWrap.razor
@@ -1,5 +1,6 @@
 ﻿@using System.ComponentModel
 @using AntDesign.TableModels
+@namespace H.LowCode.ComponentParts.BasicComponents
 
 <Table @ref="table"
        TItem="WeatherForecast"
