--- a/src/Parts/H.LowCode.ComponentParts.ExtensionComponents/Components/LakexEditor.razor
+++ b/src/Parts/H.LowCode.ComponentParts.ExtensionComponents/Components/LakexEditor.razor
@@ -1,4 +1,6 @@
-﻿@* 
+﻿@namespace H.LowCode.ComponentParts.ExtensionComponents
+
+@* 
 * 基于语雀编辑器：
 * https://www.yuque.com/yuque/developer/gfoax065u2v72isu
 *@
