--- a/src/Parts/H.LowCode.ComponentParts.ExtensionComponents/Components/Map.razor
+++ b/src/Parts/H.LowCode.ComponentParts.ExtensionComponents/Components/Map.razor
@@ -1,4 +1,5 @@
 ﻿@using Mapsui.UI.Blazor
+@namespace H.LowCode.ComponentParts.ExtensionComponents
 
 <PageTitle>MapsuiExercise</PageTitle>
 <div class="container">
