--- a/src/Parts/H.LowCode.ComponentParts.ExtensionComponents/Components/MonacoEditor.razor
+++ b/src/Parts/H.LowCode.ComponentParts.ExtensionComponents/Components/MonacoEditor.razor
@@ -1,4 +1,6 @@
-﻿@inject IJSRuntime JSRuntime
+﻿@namespace H.LowCode.ComponentParts.ExtensionComponents
+
+@inject IJSRuntime JSRuntime
 
 <link rel="stylesheet" type="text/css" href="_content/H.LowCode.ComponentParts.ExtensionComponents/MonacoEditor/editor/editor.main.css" />
 
