--- a/src/Parts/H.LowCode.ComponentParts.ExtensionComponents/PageTemplates/ListTemplate.razor
+++ b/src/Parts/H.LowCode.ComponentParts.ExtensionComponents/PageTemplates/ListTemplate.razor
@@ -1,4 +1,6 @@
-﻿<h3>ListTemplate</h3>
+﻿@namespace H.LowCode.ComponentParts.ExtensionComponents
+
+<h3>ListTemplate</h3>
 
 @code {
     [Parameter]
