--- a/src/Parts/H.LowCode.ComponentParts.ExtensionComponents/PageTemplates/TableTemplate.razor
+++ b/src/Parts/H.LowCode.ComponentParts.ExtensionComponents/PageTemplates/TableTemplate.razor
@@ -1,4 +1,6 @@
-﻿<Layout Style="height:100%">
+﻿@namespace H.LowCode.ComponentParts.ExtensionComponents
+
+<Layout Style="height:100%">
     <Sider Style="background: #f4f7fa; height:100%;">
         <Tree @ref="tree" DefaultExpandAll BlockNode
               ShowIcon DataSource="games"
