--- a/src/RenderEngine/H.LowCode.RenderEngine/BaseRender/ComponentRender.razor
+++ b/src/RenderEngine/H.LowCode.RenderEngine/BaseRender/ComponentRender.razor
@@ -1,4 +1,4 @@
-﻿@namespace H.LowCode.DesignEngine
+﻿@namespace H.LowCode.RenderEngine
 
 @if (Component.IsHiddenTitle == false && Component.IsContainerComponent == false)
 {
