--- a/src/Admin/H.LowCode.Admin/Pages/Markets/AppPopularTemplates.razor
+++ b/src/Admin/H.LowCode.Admin/Pages/Markets/AppPopularTemplates.razor
@@ -1,4 +1,5 @@
-﻿@layout ProAdminLayout
+﻿@namespace H.LowCode.Admin
+@layout ProAdminLayout
 
 <Card Title="图书管理系统" Style="float:left; width:250px; margin:5px;">
     <Extra>
