--- a/src/DesignEngine/H.LowCode.DesignEngine.Admin/_Imports.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine.Admin/_Imports.razor
@@ -10,8 +10,7 @@
 @using AntDesign.ProLayout
 @using AntDesign.TableModels
 @using H.Extensions.System
-@using H.LowCode.DesignEngine.Admin.Layout
+@using H.LowCode.DesignEngine.Admin
 @using H.LowCode.DesignEngine.Model
 @using H.LowCode.MetaSchema
-@using H.LowCode.DesignEngine.Admin.Pages.DataSource
 @using H.Util.Blazor
