--- a/src/Parts/H.LowCode.ComponentParts.BasicComponents/Components/CarouselWrap.razor
+++ b/src/Parts/H.LowCode.ComponentParts.BasicComponents/Components/CarouselWrap.razor
@@ -1,4 +1,5 @@
-﻿@inherits ContainerComponentBase
+﻿@namespace H.LowCode.ComponentParts.BasicComponents
+@inherits ContainerComponentBase
 
 <Carousel Style="height:160px; background: #364d79;">
     @for (int i = 0; i < ItemCount; i++)
