--- a/src/Parts/H.LowCode.ComponentParts.BasicComponents/Components/GridWrap.razor
+++ b/src/Parts/H.LowCode.ComponentParts.BasicComponents/Components/GridWrap.razor
@@ -1,4 +1,5 @@
-﻿@inherits ContainerComponentBase
+﻿@namespace H.LowCode.ComponentParts.BasicComponents
+@inherits ContainerComponentBase
 
 <div style="height: auto;">
     @for (int r = 0; r < Rows; r++)
