--- a/src/Parts/H.LowCode.ComponentParts.BasicComponents/Components/ListWrap.razor
+++ b/src/Parts/H.LowCode.ComponentParts.BasicComponents/Components/ListWrap.razor
@@ -1,4 +1,5 @@
-﻿@inherits ContainerComponentBase
+﻿@namespace H.LowCode.ComponentParts.BasicComponents
+@inherits ContainerComponentBase
 
 <AntList DataSource="@DataSource" TItem="ListItem">
     <ListItem OnClick="()=>OnItemClick(context.Title)">
