--- a/src/Parts/H.LowCode.ComponentParts.BasicComponents/Components/TabsWrap.razor
+++ b/src/Parts/H.LowCode.ComponentParts.BasicComponents/Components/TabsWrap.razor
@@ -1,4 +1,5 @@
-﻿@inherits ContainerComponentBase
+﻿@namespace H.LowCode.ComponentParts.BasicComponents
+@inherits ContainerComponentBase
 
 <Tabs OnChange="OnTabChange" Animated Style="width:100%; height: auto;">
     @for (int i = 0; i < ItemCount; i++)
