--- a/src/Parts/H.LowCode.ComponentParts.ExtensionComponents/_Imports.razor
+++ b/src/Parts/H.LowCode.ComponentParts.ExtensionComponents/_Imports.razor
@@ -5,6 +5,6 @@
 @using AntDesign
 @using AntDesign.TableModels
 @using H.LowCode.DesignEngine.Abstraction
-@using H.LowCode.DesignEngine.DesignPanel
+@using H.LowCode.DesignEngine
 @using H.LowCode.MetaSchema
 @using H.Util.Blazor
