--- a/src/Parts/H.LowCode.ThemeParts.AntBlazor/_Imports.razor
+++ b/src/Parts/H.LowCode.ThemeParts.AntBlazor/_Imports.razor
@@ -1,6 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Routing
-@using H.LowCode.ThemeParts.AntBlazor.Layout
+@using H.LowCode.ThemeParts.AntBlazor
 @using H.LowCode.RenderEngine
 @using H.LowCode.MetaSchema
 @using System.Net.Http
