--- a/src/Admin/H.LowCode.Admin/Pages/Index.razor
+++ b/src/Admin/H.LowCode.Admin/Pages/Index.razor
@@ -74,22 +74,7 @@
                 <GridCol Span="24">
                     <p>页面渲染示例 (快捷入口)：</p>
                     <p>
-                        <a href="/testapp/1" target="_blank">基础表单渲染</a>
-                    </p>
-                    <p>
-                        <a href="/testapp/2" target="_blank">联动表单渲染</a>
-                    </p>
-                    <p>
-                        <a href="/testapp/3" target="_blank">校验表单渲染</a>
-                    </p>
-                    <p>
-                        <a href="/testapp/4" target="_blank">复杂表单渲染</a>
-                    </p>
-                    <p>
-                        <a href="/testapp/5" target="_blank">自定义表单渲染</a>
-                    </p>
-                    <p>
-                        <a href="/testapp/6" target="_blank">列表渲染</a>
+                        <a href="/testapp/index" target="_blank">页面渲染示例</a>
                     </p>
                 </GridCol>
             </GridRow>
