--- a/src/DesignEngine/H.LowCode.DesignEngine/DesignPanel/ComponentItem.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine/DesignPanel/ComponentItem.razor
@@ -2,16 +2,16 @@
 
 @if (Component.IsHiddenTitle == false && Component.IsContainerComponent == false)
 {
-    <div class="componentitem-title">@Component.ComponentProperty.Title ：</div>
+    <div class="designengine-componentitem-title">@Component.ComponentProperty.Title ：</div>
 }
 
 @if (Component.IsContainerComponent)
 {
-    <div class="componentitem-div-container">@_renderFragment</div>
+    <div class="designengine-componentitem-div-container">@_renderFragment</div>
 }
 else
 {
-    <div class="componentitem-div-component">@_renderFragment</div>
+    <div class="designengine-componentitem-div-component">@_renderFragment</div>
 }
 
 @code {
@@ -73,6 +73,8 @@ else
                 }
             }
         }
-        builder.CloseComponent();
+
+        if (Component.ComponentFragments.Count > 0)
+            builder.CloseComponent();
     };
 }
