--- a/src/DesignEngine/H.LowCode.DesignEngine/DesignPanel/ComponentItem.razor.css
+++ b/src/DesignEngine/H.LowCode.DesignEngine/DesignPanel/ComponentItem.razor.css
@@ -1,14 +1,14 @@
-﻿.componentitem-title {
+﻿.designengine-componentitem-title {
     width: 180px;
     padding-left: 5px;
 }
 
-.componentitem-div-component {
+.designengine-componentitem-div-component {
     width: 100%;
     padding-right: 5px;
 }
 
-.componentitem-div-container {
+.designengine-componentitem-div-container {
     width: 100%;
     height: 100%;
 }
