--- a/src/Parts/H.LowCode.ComponentParts.ExtensionComponents/Components/MonacoEditor.razor
+++ b/src/Parts/H.LowCode.ComponentParts.ExtensionComponents/Components/MonacoEditor.razor
@@ -2,7 +2,7 @@
 
 @inject IJSRuntime JSRuntime
 
-<link rel="stylesheet" type="text/css" href="_content/H.LowCode.ComponentParts.ExtensionComponents/MonacoEditor/editor/editor.main.css" />
+@* <link rel="stylesheet" type="text/css" href="_content/H.LowCode.ComponentParts.ExtensionComponents/MonacoEditor/editor/editor.main.css" /> *@
 
 <div id="monaco-container" style="width:100%; height:100%;"></div>
 
@@ -38,7 +38,9 @@
     {
         if (firstRender)
         {
-            await LoadMonacoEditorAsync("monaco-container", Code, Language, Theme);
+            //await LoadMonacoEditorAsync("monaco-container", Code, Language, Theme);
+
+            await base.OnAfterRenderAsync(firstRender);
         }
     }
 
