DesignEngineLayout.razor 中禁用预呈现，即基于此 Layout 的页面（如 DesignPage.razor）无预呈现（原先使用 PersistentComponentState 方案存在问题，DragDropStateService 中的状态在启用预呈现的场景下缓存数据存在问题）

--- a/src/DesignEngine/H.LowCode.DesignEngine/DesignPanel/DesignPanel.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine/DesignPanel/DesignPanel.razor
@@ -1,17 +1,19 @@
 ﻿@namespace H.LowCode.DesignEngine
 
 @inject DragDropStateService DragDropStateService
-@inject ComponentStateWrapper<DesignPanel, ComponentSchema> State
 
-<div class="designpanel" style="margin:5px; height:100%; overflow-y: auto;">
-    <DropItemContainer ContainerComponent="@State.Value"></DropItemContainer>
+@if (_rootComponent != null)
+{
+    <div class="designpanel" style="margin:5px; height:100%; overflow-y: auto;">
+        <DropItemContainer ContainerComponent="@_rootComponent"></DropItemContainer>
 
-    @if (PageType == (int)PageTypeEnum.Form)
-    {
-        @* 表单提交、取消按钮 *@
-        <DropItemContainer ContainerComponent="@CreatComponent_FormButton()"></DropItemContainer>
-    }
-</div>
+        @if (PageType == (int)PageTypeEnum.Form)
+        {
+            @* 表单提交、取消按钮 *@
+            <DropItemContainer ContainerComponent="@CreatComponent_FormButton()"></DropItemContainer>
+        }
+    </div>
+}
 
 @code {
     [CascadingParameter(Name = "appId")]
@@ -23,14 +25,13 @@
     [SupplyParameterFromQuery(Name = "pt")]
     public int PageType { get; set; }
 
+    private ComponentSchema _rootComponent;
+
     protected override async Task OnInitializedAsync()
     {
-        if(State.Value is null)
-        {
-            State.Value = LoadRootComponent();
+        _rootComponent = LoadRootComponent();
 
-            await base.OnInitializedAsync();
-        }
+        await base.OnInitializedAsync();
     }
 
     private ComponentSchema LoadRootComponent()
