--- a/src/DesignEngine/H.LowCode.DesignEngine/Layout/DesignEngineLayout.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine/Layout/DesignEngineLayout.razor
@@ -4,7 +4,7 @@
 <PageTitle>页面设计器</PageTitle>
 
 <Layout Class="layout" Style="height:100%;">
-    <Content Style="height:100%;">
+    <Content Style="height:100%;" @rendermode="new InteractiveAutoRenderMode(false)">
         @Body
     </Content>
 </Layout>
